Change light switch icon and fix button spacing.

--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ body {
 
 @media (min-width: 750px) {
   .page-buttons {
-    width: 50%;
+    width: 45%;
     grid-template-areas: "add remove switch start-all reset-all";
     grid-column-gap: 30px;
   }
@@ -142,7 +142,8 @@ body {
 .start-all,
 .reset-all,
 .add,
-.remove {
+.remove,
+.light-switch {
   width: 50px;
 }
 /* Page Controls */
